import 'package:navigation/navigation.dart';

import 'home.gm.dart';

export 'package:home/home.dart';
export 'src/presentation/pages/home_page.dart';

@AutoRouterConfig.module()
class HomeModule extends $HomeModule {}